ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   - http:
      paths:
      - path: /hi
        backend:
          serviceName: hi-svc
          servicePort: 80
      - path: /bye
        backend:
          serviceName: bye-svc
          servicePort: 80


#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: web
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /hi
#        pathType: Prefix
#        backend:
#          serviceName: hiapp
#          servicePort: 80
